@@ -1,229 +1,388 @@
 package org.rsinitsyn.quiz.component.cleverest;
 
-import com.vaadin.flow.component.AttachEvent;
-import com.vaadin.flow.component.DetachEvent;
+import com.vaadin.flow.component.*;
 import com.vaadin.flow.component.button.Button;
 import com.vaadin.flow.component.dialog.Dialog;
 import com.vaadin.flow.component.html.Div;
+import com.vaadin.flow.component.html.Hr;
 import com.vaadin.flow.component.html.Span;
+import com.vaadin.flow.component.notification.Notification;
 import com.vaadin.flow.component.notification.NotificationVariant;
 import com.vaadin.flow.component.orderedlayout.HorizontalLayout;
 import com.vaadin.flow.component.orderedlayout.VerticalLayout;
-import com.vaadin.flow.component.textfield.TextField;
 import com.vaadin.flow.shared.Registration;
 import com.vaadin.flow.theme.lumo.LumoUtility;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.function.Consumer;
-import java.util.stream.Collectors;
+import lombok.Getter;
+import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
+import lombok.experimental.Accessors;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.lang3.StringUtils;
-import org.rsinitsyn.quiz.entity.QuestionType;
+import org.rsinitsyn.quiz.component.custom.Emoji;
+import org.rsinitsyn.quiz.model.QuestionLayoutRequest;
 import org.rsinitsyn.quiz.model.QuestionModel;
-import org.rsinitsyn.quiz.model.cleverest.AnswerType;
-import org.rsinitsyn.quiz.model.cleverest.CleverestGameState;
-import org.rsinitsyn.quiz.model.cleverest.UserGameState;
+import org.rsinitsyn.quiz.model.cleverest.*;
+import org.rsinitsyn.quiz.model.sound.GameSound;
 import org.rsinitsyn.quiz.service.CleverestBroadcaster;
-import org.rsinitsyn.quiz.utils.AudioUtils;
-import org.rsinitsyn.quiz.utils.QuizComponents;
+import org.rsinitsyn.quiz.service.CleverestBroadcaster.*;
 import org.rsinitsyn.quiz.utils.QuizUtils;
-import org.rsinitsyn.quiz.utils.SessionWrapper;
-import org.rsinitsyn.quiz.utils.StaticValuesHolder;
-import org.vaadin.addons.pandalyte.VoiceRecognition;
+
+import java.util.*;
+import java.util.concurrent.atomic.AtomicBoolean;
+
+import static org.rsinitsyn.quiz.component.cleverest.CleverestComponents.*;
+import static org.rsinitsyn.quiz.component.custom.question.QuestionLayoutFactory.createQuestionLayout;
+import static org.rsinitsyn.quiz.utils.AudioUtils.playStaticSoundAsync;
+import static org.rsinitsyn.quiz.utils.QuizComponents.appendTextBorder;
+import static org.rsinitsyn.quiz.utils.QuizComponents.openConfirmDialog;
+import static org.rsinitsyn.quiz.utils.QuizUtils.*;
+import static org.rsinitsyn.quiz.utils.SessionWrapper.getLoggedUser;
+import static org.rsinitsyn.quiz.utils.StaticValuesHolder.*;
 
 @Slf4j
 public class CleverestGamePlayBoardComponent extends VerticalLayout {
 
     private String gameId;
     private CleverestBroadcaster broadcaster;
-    private boolean isAdmin;
-    private Runnable adminAction = null;
+    private boolean gameHost;
+    private Runnable hostAction = null;
 
     private final Div topContainer = new Div();
     private final Div midContainer = new Div();
-    private final Div botContainer = new Div();
     private final CleverestResultComponent resultComponent = new CleverestResultComponent();
 
-    private final List<Registration> subs = new ArrayList<>();
+    private final List<Registration> subscriptions = new ArrayList<>();
 
-    public void setState(String gameId, CleverestBroadcaster broadcaster, boolean isAdmin, boolean refreshEvent) {
-        log.debug("Render components: {}", gameId);
+    /**
+     * Entry point. Called from GamePage.configureAndAddPlayBoardComponent().
+     * UI must be passed explicitly — never rely on getUI() here because
+     * setState() is called before the component is attached (UI = -1 at that moment).
+     * Subscriptions are registered here (not in onAttach) so they are created
+     * exactly once per setState call, regardless of how many times Vaadin
+     * triggers attach/detach during the same navigation cycle.
+     */
+    public void setState(String gameId,
+                         CleverestBroadcaster broadcaster,
+                         boolean gameHost,
+                         boolean refreshEvent,
+                         UI ui) {
+        logState(this, ui, "SetState", true, subscriptions);
+        // Always clear first — guards against double-attach during @PreserveOnRefresh refresh cycle
+        clearSubs();
+
         this.gameId = gameId;
         this.broadcaster = broadcaster;
-        this.isAdmin = isAdmin;
+        this.gameHost = gameHost;
 
-        if (isAdmin) {
+        // Register all subscriptions right here with the known-good UI reference
+        subscribeOnEvents(ui);
+
+        if (gameHost) {
             int currRound = broadcaster.getState(gameId).getRoundNumber();
             if (refreshEvent) {
-                showRoundRules(currRound, "Рефреш страницы.");
+                renderCurrentQuestion();
             } else {
-                showRoundRules(currRound, broadcaster.getState(gameId).getRoundRules().get(currRound));
+                showRoundRules(broadcaster.getState(gameId).getRoundRules().get(currRound));
             }
         } else {
-            renderUserPersonalScore();
+            renderUserProfile();
+            if (refreshEvent) {
+                restoreCurrentQuestion();
+            }
         }
-
         topContainer.setWidthFull();
         midContainer.setWidthFull();
-        botContainer.setWidthFull();
-        add(topContainer, midContainer, botContainer);
+        add(topContainer, midContainer);
+        logState(this, ui, "SetState", false, subscriptions);
     }
 
-    private void renderTopContainerForAdmin(Collection<UserGameState> userGameStates) {
-        if (!isAdmin) {
+    /**
+     * Restores the current question from broadcaster state during a page refresh.
+     * Does NOT call getCurrentQuestion() to avoid the side-effect of resetting
+     * questionRenderedTime — reads the question list directly by index instead.
+     * For round 3 (categories), renders the categories table instead of a question.
+     */
+    private void restoreCurrentQuestion() {
+        CleverestGameState state = broadcaster.getState(gameId);
+        final var roundNumber = state.getRoundNumber();
+        if (roundNumber == 3) {
+            // Round 3 is categories-based — nothing to restore here,
+            // the RenderCategoriesEvent will re-render on next action.
+            // Just show a waiting message for players.
+            if (!gameHost) {
+                midContainer.add(userInfoLightSpan("В ожидании вопроса", LumoUtility.TextColor.SECONDARY, CleverestComponents.MOBILE_LARGE_FONT));
+            }
+            return;
+        }
+        final var userRefreshState = state.getUserRefreshState(getLoggedUser());
+        renderQuestionLayout(userRefreshState.question(),
+                userRefreshState.questionNumber(),
+                userRefreshState.totalQuestionsSize(),
+                roundNumber);
+        midContainer.setEnabled(!userRefreshState.answerGiven());
+    }
+
+    // -------------------------------------------------------------------------
+    // Subscription setup — called once from setState, never from onAttach
+    // -------------------------------------------------------------------------
+
+    private void subscribeOnEvents(UI ui) {
+        subscribeOnCommonEvents(ui);
+        if (gameHost) {
+            subscribeOnHostOnlyEvents(ui);
+        } else {
+            subscribeOnPlayerOnlyEvents(ui);
+        }
+    }
+
+    private void subscribeOnCommonEvents(final UI ui) {
+        subscriptions.add(broadcaster.subscribe(gameId, UserAnsweredEvent.class, event ->
+                runActionInUi(ui, () -> {
+                    if (gameHost) {
+                        updateUserAnswerGiven(event.username(), event.lastResponseTimeSec());
+                    }
+                    if (doneByAuthenticated(event)) {
+                        midContainer.setEnabled(false);
+                    }
+                    if (event.roundNumber() == 3) {
+                        runHostAction();
+                    } else {
+                        notification("%s ответил!".formatted(event.username()),
+                                NotificationVariant.LUMO_CONTRAST,
+                                Notification.Position.TOP_START);
+                    }
+                })));
+        subscriptions.add(broadcaster.subscribe(gameId, GetQuestionEvent.class, event ->
+                runActionInUi(ui, () -> {
+                            // workaround
+                            final var userState = broadcaster.getState(gameId).getUserState(getLoggedUser());
+                            if (!gameHost && userState.isAnswerGiven()) {
+                                return;
+                            }
+                            renderQuestion(
+                                    event.getQuestion(),
+                                    event.getQuestionNumber(),
+                                    event.getTotalQuestionsInRound(),
+                                    event.getRoundNumber());
+                        }
+                )));
+
+        subscriptions.add(broadcaster.subscribe(gameId, RenderCategoriesEvent.class, event ->
+                runActionInUi(ui, () -> {
+                    midContainer.removeAll();
+                    if (gameHost) {
+                        renderTopContainerForHost(List.of(event.getUser().profile()));
+                        renderCategoriesTable(event.getUser(), event.getData());
+                    } else {
+                        if (doneByAuthenticated(event)) {
+                            midContainer.add(userInfoLightSpan("Время отвечать!", LumoUtility.TextColor.PRIMARY, CleverestComponents.MOBILE_LARGE_FONT));
+                        } else {
+                            midContainer.add(userInfoLightSpan("В ожидании вопроса", LumoUtility.TextColor.SECONDARY, CleverestComponents.MOBILE_LARGE_FONT));
+                        }
+                    }
+                })));
+
+        subscriptions.add(broadcaster.subscribe(gameId, RoundInfoEvent.class, event ->
+                runActionInUi(ui, () -> showRoundRules(event.getRules()))));
+
+        subscriptions.add(broadcaster.subscribe(gameId, GameFinishedEvent.class, event ->
+                runActionInUi(ui, this::renderResults)));
+
+        subscriptions.add(broadcaster.subscribe(gameId, UserSentMessageEvent.class, event ->
+                runActionInUi(ui, () -> chatNotification(event.getUserProfile().orElseThrow(), event.getMessage()))));
+    }
+
+    private void subscribeOnPlayerOnlyEvents(UI ui) {
+        log.debug("Subscribed on player events: {}", getLoggedUser());
+
+        subscriptions.add(broadcaster.subscribe(gameId, UpdatePersonalScoreEvent.class, event ->
+                runActionInUi(ui, () -> renderUserProfile())));
+
+        subscriptions.add(broadcaster.subscribe(gameId, QuestionChoosenEvent.class, event ->
+                runActionInUi(ui, () -> {
+                    if (getLoggedUser().equals(event.getUsername())) {
+                        renderQuestionLayout(event.getQuestion(), 1, 1, 1); // TODO Real numbers
+                    }
+                })));
+    }
+
+    private void subscribeOnHostOnlyEvents(UI ui) {
+        log.debug("Subscribed on host events: {}", getLoggedUser());
+
+        subscriptions.add(broadcaster.subscribe(gameId, AllUsersAnsweredEvent.class, event ->
+//                playStaticSoundAsync(SUBMIT_ANSWER_SHORT_AUDIOS.next()).thenRun(() ->
+                        runActionInUi(ui, () ->
+                                showCorrectAnswer(
+                                        event.getQuestion(),
+                                        broadcaster.getState(gameId).userSnapshotsSortedByResponseTime().values(),
+                                        event.getRevealScoreAfter(),
+                                        manualApprove(event.getQuestion()),
+                                        () -> {
+                                        },
+                                        () -> {
+                                            if (event.isRoundOver()) {
+                                                broadcaster.sendNextRoundEvent(gameId);
+                                            } else {
+                                                broadcaster.sendNextQuestionEvent(gameId);
+                                            }
+                                        })))
+//                )
+        );
+        subscriptions.add(broadcaster.subscribe(gameId, QuestionGradedEvent.class, event ->
+                runActionInUi(ui, () -> {
+                    if (gameHost) {
+                        updateUserGrade(event.username(), event.getEmoji());
+                    }
+                })));
+        subscriptions.add(broadcaster.subscribe(gameId, PlaySoundEvent.class, event ->
+                playStaticSoundAsync(event.getSound().path())));
+        subscriptions.add(broadcaster.subscribe(gameId, DeleteUserEvent.class, event ->
+                renderTopContainerForHost(broadcaster.getState(gameId).getAllUserProfiles())));
+        subscriptions.add(broadcaster.subscribe(gameId, LiveReactionEvent.class, event -> {
+            runActionInUi(ui, () -> ui.getPage().executeJs("window.spawnReaction($0)", event.getEmoji().value));
+        }));
+    }
+
+    private Optional<ManualApprove> manualApprove(QuestionModel question) {
+        if (!question.isManualApprove()) {
+            return Optional.empty();
+        }
+        final var clicksLimit = broadcaster.getState(gameId).getRoundNumber() == 3
+                ? 1
+                : switch (question.getType()) {
+            case TOP -> question.getAnswers().size();
+            case LINK -> question.getAnswers().size() / 2;
+            case GUESS_PHOTO -> question.getHints().size();
+            default -> 1;
+        };
+        final var pointsPerClick = broadcaster.getState(gameId).getRoundNumber() == 3
+                ? question.getPoints()
+                : switch (question.getType()) {
+            case TOP -> 1;
+            case GUESS_PHOTO -> question.getPoints();
+            default -> 1;
+        };
+        return Optional.of(new ManualApprove(clicksLimit, pointsPerClick, uName -> {
+            broadcaster.getState(gameId).getUserState(uName).increaseScoreAndMarkCorrect(pointsPerClick);
+            broadcaster.sendUpdatePersonalScoreEvent(gameId);
+        }));
+    }
+
+    @Override
+    protected void onAttach(AttachEvent attachEvent) {
+        logState(this, attachEvent.getUI(), "onAttach", false, subscriptions);
+    }
+
+    @Override
+    protected void onDetach(DetachEvent detachEvent) {
+        logState(this, detachEvent.getUI(), "OnDetach", true, subscriptions);
+        clearSubs();
+        logState(this, detachEvent.getUI(), "OnDetach", false, subscriptions);
+    }
+
+    private void renderTopContainerForHost(Collection<UserProfile> userGameStates) {
+        if (!gameHost) {
             return;
         }
         topContainer.removeAll();
-        userGameStates.forEach(uState -> {
-            Div userDiv = new Div();
-            userDiv.getStyle().set("color", uState.getColor());
-            userDiv.add(CleverestComponents.userNameSpan(uState.getUsername(), uState.getColor()));
-            userDiv.setId("top-container-user-" + uState.getUsername());
-            userDiv.setWidthFull();
-            userDiv.addClassNames(LumoUtility.Border.BOTTOM, LumoUtility.FontWeight.SEMIBOLD, LumoUtility.FontSize.XXLARGE);
-            topContainer.add(userDiv);
+        userGameStates.forEach(profile -> {
+            final var userProfile = userProfile(profile, CleverestComponents.MOBILE_LARGE_FONT);
+            userProfile.setId("top-container-user-" + profile.username());
+            userProfile.addDoubleClickListener(event ->
+                    openConfirmDialog(
+                            new Span("Удалить игрока [%s]".formatted(profile.username())),
+                            "",
+                            () -> broadcaster.sendDeleteUserEvent(gameId, profile.username())));
+            topContainer.add(userProfile);
         });
     }
 
-    private void updateUserAnswerGiven(UserGameState userGameState) {
-        var component = (Div) topContainer.getChildren()
-                .filter(c -> c.getId().orElseThrow().equals("top-container-user-" + userGameState.getUsername()))
-                .findFirst()
-                .orElseThrow(() -> new IllegalArgumentException("Cant update topContainer. Username not found: " + userGameState.getUsername()));
-        component.addComponentAsFirst(CleverestComponents.userCheckIcon());
-        component.addComponentAsFirst(QuizComponents.appendTextBorder(new Span(userGameState.lastResponseTimeSec())));
+    private void updateUserAnswerGiven(String username, String lastResponseTimeSec) {
+        topContainerUserComponent(username).ifPresent(component -> {
+            component.addComponentAsFirst(userCheckIcon());
+            component.addComponentAsFirst(appendTextBorder(new Span(lastResponseTimeSec)));
+        });
     }
 
-    private void showRoundRules(int roundNumber, String rulesText) {
-        Div rules = new Div();
-        rules.setText(rulesText);
-        rules.addClassNames(LumoUtility.FontSize.XXXLARGE, LumoUtility.FontWeight.SEMIBOLD, LumoUtility.TextAlignment.CENTER);
-        rules.setWidth("25em");
-        CleverestComponents.openDialog(rules, "Раунд " + roundNumber, () -> {
-            if (roundNumber == 3) {
-                broadcaster.sendRenderCategoriesEvent(gameId, null, true);
-            } else {
-                broadcaster.sendGetQuestionEvent(gameId);
-            }
+    private void updateUserGrade(String username, Emoji emoji) {
+        topContainerUserComponent(username).ifPresent(component ->
+                component.addComponentAsFirst(emojiBig(emoji.value)));
+    }
+
+    private Optional<HorizontalLayout> topContainerUserComponent(String username) {
+        return topContainer.getChildren()
+                .filter(c -> c.getId().map(id -> id.equals("top-container-user-" + username)).orElse(false))
+                .map(c -> (HorizontalLayout) c)
+                .findAny();
+    }
+
+    private void showRoundRules(String rulesText) {
+        openDialog(horizontalLayoutCenter(new Span(rulesText)), "", gameHost ? this::renderCurrentQuestion : () -> {
         });
+    }
+
+    private void renderCurrentQuestion() {
+        if (!gameHost) {
+            return;
+        }
+        if (broadcaster.getState(gameId).getRoundNumber() == 3) {
+            broadcaster.sendRenderCategoriesEvent(gameId, null, true);
+        } else {
+            broadcaster.sendCurrentQuestionEvent(gameId);
+        }
     }
 
     private void renderQuestion(QuestionModel question, int questionNumber, int totalQuestions, int roundNumber) {
         log.debug("Render question. GameId {}, questionText: {}", gameId, question.getText());
-        renderTopContainerForAdmin(broadcaster.getState(gameId).getUsers().values());
+        renderTopContainerForHost(broadcaster.getState(gameId).getAllUserProfiles());
         renderQuestionLayout(question, questionNumber, totalQuestions, roundNumber);
-        var type = question.getType().equals(QuestionType.TOP)
-                ? AnswerType.TOP
-                : roundNumber == 2 ? AnswerType.INPUT : AnswerType.OPTIONS;
-        if (question.getType().equals(QuestionType.LINK)) {
-            type = AnswerType.MATCH;
-        }
-        renderAnswersLayout(question, type);
-    }
-
-    private void renderAnswersLayout(QuestionModel questionModel, AnswerType answerType) {
-        var answerInput = new VerticalLayout();
-        answerInput.setPadding(false);
-        answerInput.setAlignItems(Alignment.CENTER);
-
-        botContainer.removeAll();
-        botContainer.setEnabled(true);
-
-        if (AnswerType.OPTIONS.equals(answerType)) {
-            if (questionModel.getType().equals(QuestionType.PHOTO)) {
-                if (isAdmin) {
-                    answerInput.add(CleverestComponents.userPhotoOptionsInputComponentsCarousel(questionModel));
-                } else {
-                    answerInput.add(CleverestComponents.userPhotoOptionsInputComponents(questionModel,
-                            answerModel -> broadcaster.sendSubmitAnswerEventAndCheckScore(
-                                    gameId, SessionWrapper.getLoggedUser(), questionModel, answerModel.getPhotoFilename(), answerModel::isCorrect)));
-                }
-            } else {
-                answerInput.add(CleverestComponents.userTextOptionsInputComponents(questionModel,
-                        !isAdmin,
-                        answerModel -> broadcaster.sendSubmitAnswerEventAndCheckScore(gameId, SessionWrapper.getLoggedUser(), questionModel, answerModel.getText(), answerModel::isCorrect)));
-            }
-        } else if (AnswerType.INPUT.equals(answerType) || AnswerType.VOICE_OR_INPUT.equals(answerType)) {
-            if (isAdmin) return;
-            Button submit = CleverestComponents.submitButton(e -> {
-            });
-
-            TextField textField = CleverestComponents.answerInput(event -> {
-                submit.setEnabled(!event.getValue().isBlank());
-            });
-            if (AnswerType.VOICE_OR_INPUT.equals(answerType)) {
-                botContainer.add(createQuestionGrade(questionModel));
-
-                VoiceRecognition voiceRecognition = new VoiceRecognition();
-                voiceRecognition.addResultListener(event -> {
-                    textField.setValue(event.getSpeech());
-                });
-                answerInput.add(voiceRecognition);
-            }
-            submit.addClickListener(event -> {
-                broadcaster.sendSubmitAnswerEventAndCheckScore(gameId,
-                        SessionWrapper.getLoggedUser(),
-                        questionModel,
-                        textField.getValue(),
-                        () -> false);
-                textField.setValue("*****");
-            });
-            answerInput.add(textField, submit);
-        } else if (AnswerType.TOP.equals(answerType)) {
-            if (isAdmin) return;
-            answerInput.add(CleverestComponents.userTopListInputComponents(
-                    questionModel,
-                    answers -> {
-                        broadcaster.sendSubmitAnswerEventAndCheckScore(gameId,
-                                SessionWrapper.getLoggedUser(),
-                                questionModel,
-                                String.join(", ", answers),
-                                () -> false);
-                    }
-            ));
-        } else if (AnswerType.MATCH.equals(answerType)) {
-            if (isAdmin) return;
-            answerInput.add(CleverestComponents.userMatchAnswersComponents(questionModel, pairs -> {
-                broadcaster.sendSubmitAnswerEventAndCheckScore(
-                        gameId,
-                        SessionWrapper.getLoggedUser(),
-                        questionModel,
-                        pairs.stream().map(pair -> pair.getLeft().getText() + " = " + pair.getRight().getText()).collect(Collectors.joining(", ")),
-                        () -> false
-                );
-            }));
-        }
-        botContainer.add(answerInput);
     }
 
     private void renderQuestionLayout(QuestionModel questionModel, int questionNumber, int totalQuestions, int roundNumber) {
-        List<String> questionClasses = isAdmin ? List.of(LumoUtility.FontSize.XXXLARGE) : List.of(CleverestComponents.MOBILE_LARGE_FONT);
-        String imageHeight = isAdmin ? CleverestComponents.LARGE_IMAGE_HEIGHT : CleverestComponents.MEDIUM_IMAGE_HEIGHT;
-
         midContainer.removeAll();
+        midContainer.setEnabled(true);
 
-        Span questionNumberSpan = new Span();
-        questionNumberSpan.setText(String.format("Раунд %d. Вопрос %d/%d", roundNumber, questionNumber, totalQuestions));
-        questionNumberSpan.addClassNames(LumoUtility.FontSize.MEDIUM, LumoUtility.FontWeight.SEMIBOLD, LumoUtility.Margin.Bottom.MEDIUM, LumoUtility.AlignSelf.START);
+        midContainer.add(horizontalLayoutCenter(
+                new Span("Раунд %d. Вопрос %d/%d".formatted(roundNumber, questionNumber, totalQuestions))
+        ));
+        midContainer.add(new Hr());
 
-        if (!isAdmin) {
-            midContainer.add(createQuestionGrade(questionModel));
-        }
-        midContainer.add(questionNumberSpan);
-        midContainer.add(CleverestComponents.questionLayout(questionModel, questionClasses, imageHeight, isAdmin));
+        String imageHeight = gameHost ? CleverestComponents.LARGE_IMAGE_HEIGHT : CleverestComponents.MEDIUM_IMAGE_HEIGHT;
+        var questionLayout = createQuestionLayout(new QuestionLayoutRequest()
+                .question(questionModel)
+                .host(gameHost)
+                .renderCategory(false)
+                .imageHeight(imageHeight));
+        questionLayout.addAnsweredListener(event -> {
+            broadcaster.sendSubmitAnswerEventAndCheckScore(gameId,
+                    getLoggedUser(),
+                    questionModel,
+                    String.join(", ", event.getAnswerGivenEvent().getAnswers()),
+                    () -> event.getAnswerGivenEvent().getResult());
+
+            QuizUtils.wait(1).thenRun(() ->
+                    runActionInUi(getUI(), () -> openQuestionGradeDialog(questionModel)));
+        });
+        midContainer.add(questionLayout);
     }
 
-    private VerticalLayout createQuestionGrade(QuestionModel questionModel) {
-        return CleverestComponents.questionGradeLayout(scoreVal -> {
-            broadcaster.sendQuestionGradedEvent(gameId, questionModel, SessionWrapper.getLoggedUser(), scoreVal);
-            CleverestComponents.notification(SessionWrapper.getLoggedUser() + ", спасибо за фидбек!", NotificationVariant.LUMO_CONTRAST);
+    private void openQuestionGradeDialog(QuestionModel question) {
+        final var layout = horizontalLayoutCenter();
+        final var dialog = openDialog(layout, "Как тебе вопрос?", () -> {
         });
+        List.of(Emoji.randomBad(), Emoji.randomMid(), Emoji.randomGood())
+                .forEach(e -> {
+                    final var emoji = emojiBig(e.value);
+                    emoji.addClickListener(event -> {
+                        fireEvent(new UpdateQuestionGradeEvent(
+                                question,
+                                getLoggedUser(),
+                                e.rating
+                        ));
+                        broadcaster.sendQuestionGradedEvent(gameId, question, getLoggedUser(), e);
+                        dialog.close();
+                    });
+                    layout.add(emoji);
+                });
     }
 
     private void renderCategoriesTable(UserGameState userToAnswer, Map<String, List<QuestionModel>> data) {
@@ -259,21 +418,34 @@ public class CleverestGamePlayBoardComponent extends VerticalLayout {
     private Button createCategoryQuestionButton(UserGameState userToAnswer, QuestionModel question) {
         Button button = CleverestComponents.primaryButton(String.valueOf(question.getPoints()), event -> {
             broadcaster.sendQuestionChoosenEvent(gameId, question, userToAnswer);
-            Dialog questionTextDialog = CleverestComponents.openDialog(CleverestComponents.questionLayout(question, List.of(LumoUtility.FontSize.XXXLARGE), "25em", isAdmin), "Вопрос", () -> {
-            });
-            setAdminAction(() -> {
+            Dialog questionTextDialog = openDialog(
+                    createQuestionLayout(new QuestionLayoutRequest()
+                            .question(question)
+                            .host(gameHost)
+                            .renderCategory(false)
+                            .imageHeight("25em")),
+                    "Вопрос",
+                    () -> {
+                    }
+            );
+            setHostAction(() -> {
                 questionTextDialog.close();
                 AtomicBoolean approved = new AtomicBoolean(false);
                 question.setAlreadyAnswered(true);
-                showCorrectAnswer(question, Collections.singletonList(userToAnswer), false, 0, true, uName -> {
-                    userToAnswer.increaseScore(question.getPoints());
-                    approved.set(true);
-                    broadcaster.sendUpdatePersonalScoreEvent(gameId);
-                }, () -> {
-                    if (!approved.get()) {
-                        userToAnswer.decreaseScore(question.getPoints());
-                    }
-                }, () -> broadcaster.sendRenderCategoriesEvent(gameId, question, false));
+                // 3rd round
+                showCorrectAnswer(question, List.of(userToAnswer.snapshot()),
+                        0,
+                        Optional.of(new ManualApprove(1, question.getPoints(), uName -> {
+                            userToAnswer.increaseScoreAndMarkCorrect(question.getPoints());
+                            approved.set(true);
+                            broadcaster.sendUpdatePersonalScoreEvent(gameId);
+                        })),
+                        () -> {
+                            if (!approved.get()) {
+                                userToAnswer.decreaseScoreAndMarkWrong(question.getPoints());
+                            }
+                        },
+                        () -> broadcaster.sendRenderCategoriesEvent(gameId, question, false));
             });
         });
         button.setEnabled(!question.isAlreadyAnswered());
@@ -281,235 +453,106 @@ public class CleverestGamePlayBoardComponent extends VerticalLayout {
         return button;
     }
 
-    private void runAdminAction() {
-        if (isAdmin) {
-            Optional.ofNullable(adminAction).ifPresentOrElse(Runnable::run, () -> log.debug("No admin action to run, gameId: {}", gameId));
-            adminAction = null;
+    private void runHostAction() {
+        if (gameHost) {
+            Optional.ofNullable(hostAction).ifPresentOrElse(
+                    Runnable::run,
+                    () -> log.debug("No host action to run, gameId: {}", gameId));
+            hostAction = null;
         }
     }
 
-    private void setAdminAction(Runnable action) {
-        if (isAdmin) {
-            this.adminAction = action;
+    private void setHostAction(Runnable action) {
+        if (gameHost) {
+            this.hostAction = action;
         }
     }
 
-    private void renderUserPersonalScore() {
-        UserGameState userState = broadcaster.getState(gameId).getUsers().get(SessionWrapper.getLoggedUser());
+    private void renderUserProfile() {
+        final var userState = broadcaster.getState(gameId).getUserState(getLoggedUser());
         if (userState == null) {
-            // This should probably never happen
             log.warn("Not joined user is accessing started Cleverest game");
             return;
         }
         topContainer.removeAll();
-        topContainer.add(CleverestComponents.userScoreLayout(SessionWrapper.getLoggedUser(), userState.getColor(), userState.getScore(), CleverestComponents.MOBILE_LARGE_FONT));
+
+        topContainer.add(userProfileWithScore(userState.snapshot(), MOBILE_LARGE_FONT));
+        topContainer.add(horizontalLayoutCenter(
+                soundButton(() -> broadcaster.sendPlaySoundEvent(gameId, GameSound.next())), // TODO: Better meme handling and chosing
+                openChatButton(messageText -> broadcaster.sendUserTextedEvent(gameId, getLoggedUser(), messageText)),
+                reactionButton(Emoji.HEART.value, (emoji) -> broadcaster.sendLiveReactionEvent(gameId, getLoggedUser(), emoji))));
+        topContainer.add(new Hr());
     }
 
-    private void showUsersScore(boolean roundOver, int revealScoreAfter, Runnable onCloseAction) {
+    private void showUsersPositionsTable(int revealScoreAfter, Runnable onCloseAction) {
         var usersScoreLayout = revealScoreAfter == 0
-                ? CleverestComponents.usersScoreTableLayout(broadcaster.getState(gameId).getSortedByScoreUsers())
-                : new VerticalLayout(CleverestComponents.userInfoLightSpan(
-                "Вопросов до таблицы результатов: " + revealScoreAfter, LumoUtility.FontSize.XXXLARGE));
+                ? usersScoreTableLayout(broadcaster.getState(gameId).usersSortedByScore().stream()
+                        .map(UserGameState::snapshot)
+                        .toList(),
+                broadcaster.getState(gameId).getLastAnswers())
+                : new VerticalLayout(userInfoLightSpan(
+                "Вопросов до таблицы результатов: %d".formatted(revealScoreAfter), MOBILE_MEDIUM_FONT));
 
-        CleverestComponents.openDialog(usersScoreLayout, "Таблица результатов", () -> {
-            if (roundOver) {
-                broadcaster.sendNewRoundEvent(gameId);
-                return;
-            }
-            onCloseAction.run();
-        });
+        openDialog(usersScoreLayout, "Таблица результатов", onCloseAction);
     }
 
     private void showCorrectAnswer(QuestionModel question,
-                                   Collection<UserGameState> users,
-                                   boolean roundOver,
+                                   Collection<UserStateSnapshot> users,
                                    int revealScoreAfter,
-                                   boolean approveManually,
-                                   Consumer<String> approveAction,
+                                   Optional<ManualApprove> manualApprove,
                                    Runnable onCloseAction,
                                    Runnable usersScoreCloseAction) {
-        if (users.stream().allMatch(UserGameState::isLastWasCorrect)) {
-            AudioUtils.playStaticSoundAsync(StaticValuesHolder.CORRECT_ANSWER_AUDIOS.next());
-        } else if (users.stream().noneMatch(UserGameState::isLastWasCorrect) && !approveManually) {
-            AudioUtils.playStaticSoundAsync(StaticValuesHolder.WRONG_ANSWER_AUDIOS.next());
+        if (users.stream().allMatch(UserStateSnapshot::correct)) {
+            playStaticSoundAsync(CORRECT_ANSWER_AUDIOS.next());
+        } else if (users.stream().noneMatch(UserStateSnapshot::correct) && manualApprove.isEmpty()) {
+            playStaticSoundAsync(WRONG_ANSWER_AUDIOS.next());
         } else {
-            AudioUtils.playStaticSoundAsync(StaticValuesHolder.REVEAL_ANSWER_AUDIOS.next());
+            playStaticSoundAsync(REVEAL_ANSWER_AUDIOS.next());
         }
-        VerticalLayout answers = new VerticalLayout();
-        answers.setSpacing(true);
-        answers.setDefaultHorizontalComponentAlignment(Alignment.START);
-        answers.setAlignItems(Alignment.START);
-        answers.addClassNames(LumoUtility.FontSize.XXXLARGE);
-
-        // answer span text
-        answers.add(CleverestComponents.correctAnswerSpan(question,
-                LumoUtility.FontSize.XXXLARGE,
-                LumoUtility.FontWeight.SEMIBOLD));
-        if (StringUtils.isNotBlank(question.getAnswerDescription())) {
-            answers.add(CleverestComponents.correctAnswerDescriptionSpan(question,
-                    LumoUtility.FontSize.XXLARGE,
-                    LumoUtility.FontWeight.LIGHT));
-        }
-
-        users.forEach(userGameState -> {
-            HorizontalLayout row = new HorizontalLayout();
-            row.setPadding(true);
-            row.setWidthFull();
-            row.setDefaultVerticalComponentAlignment(Alignment.START);
-            row.setAlignItems(Alignment.CENTER);
-
-            if (userGameState.isLastWasCorrect()) {
-                row.addClassNames(LumoUtility.Background.PRIMARY_10, LumoUtility.Border.ALL, LumoUtility.BorderColor.PRIMARY);
-            }
-
-            if (!approveManually) {
-                row.add(userGameState.isLastWasCorrect() ? CleverestComponents.doneIcon() : CleverestComponents.cancelIcon());
-            }
-
-            Span userAnswerSpan = CleverestComponents.userAnswerSpan(userGameState,
-                    question.getType(),
-                    LumoUtility.FontSize.XXXLARGE, LumoUtility.FontWeight.SEMIBOLD);
-            row.add(userAnswerSpan);
-            if (approveManually) {
-                int countLimit;
-                switch (question.getType()) {
-                    case TOP -> countLimit = question.getAnswers().size();
-                    case LINK -> countLimit = question.getAnswers().size() / 2;
-                    default -> countLimit = 0;
-                }
-                Button approveButton =
-                        CleverestComponents.approveButton(
-                                () -> approveAction.accept(userGameState.getUsername()),
-                                countLimit);
-                row.add(approveButton);
-            }
-            answers.add(row);
-        });
-
-        CleverestComponents.openDialog(answers, "Ответы", () -> {
+        final var answersLayout = userAnswersLayout(question, users, manualApprove);
+        openDialog(answersLayout, "Ответы", () -> {
             onCloseAction.run();
-            broadcaster.getState(gameId).updateUserPositions();
             broadcaster.sendUpdatePersonalScoreEvent(gameId);
-            broadcaster.sendSaveUserAnswersEvent(gameId, question);
-            showUsersScore(roundOver, revealScoreAfter, usersScoreCloseAction);
+            broadcaster.sendSaveUsersAnswersEvent(gameId, question);
+            showUsersPositionsTable(revealScoreAfter, usersScoreCloseAction);
         });
     }
 
     private void renderResults() {
         topContainer.removeAll();
         midContainer.removeAll();
-        botContainer.removeAll();
         CleverestGameState gameState = broadcaster.getState(gameId);
-        if (isAdmin) {
-            resultComponent.setState(gameState.getSortedByScoreUsers().values(), gameState.getHistory(), "");
+        if (gameHost) {
+            resultComponent.setState(gameState.usersSortedByScore(), gameState.getHistory(), "");
         } else {
-            renderUserPersonalScore();
-            midContainer.add(CleverestComponents.userInfoLightSpan("Итоговое место: " + gameState.getUsers().get(SessionWrapper.getLoggedUser()).getLastPosition(), CleverestComponents.MOBILE_LARGE_FONT));
-            resultComponent.setState(gameState.getSortedByScoreUsers().values(), gameState.getHistory(), SessionWrapper.getLoggedUser());
+            renderUserProfile();
+            midContainer.add(userInfoLightSpan("Итоговое место: " + gameState.getUserState(getLoggedUser()).getLastPosition(), CleverestComponents.MOBILE_LARGE_FONT));
+            resultComponent.setState(gameState.usersSortedByScore(), gameState.getHistory(), getLoggedUser());
         }
         midContainer.add(resultComponent);
     }
 
-    @Override
-    protected void onAttach(AttachEvent attachEvent) {
-        log.debug("onAttach: {}", gameId);
-        subs.add(broadcaster.subscribe(gameId, CleverestBroadcaster.UserAnsweredEvent.class, event -> {
-            QuizUtils.runActionInUi(attachEvent.getUI(), () -> {
-                if (isAdmin) {
-                    updateUserAnswerGiven(event.getUserGameState());
-                }
-                if (event.getUserGameState().getUsername().equals(SessionWrapper.getLoggedUser())) {
-                    botContainer.setEnabled(false);
-                }
-                if (event.getRoundNumber() == 3) {
-                    runAdminAction();
-                } else {
-                    CleverestComponents.notification(event.getUserGameState().getUsername() + " ответил", NotificationVariant.LUMO_CONTRAST);
-                }
-            });
-        }));
+    private void clearSubs() {
+        subscriptions.forEach(Registration::remove);
+        subscriptions.clear();
+    }
 
-        subs.add(broadcaster.subscribe(gameId, CleverestBroadcaster.GetQuestionEvent.class, event -> {
-            QuizUtils.runActionInUi(attachEvent.getUI(),
-                    () -> renderQuestion(
-                            event.getQuestion(),
-                            event.getQuestionNumber(),
-                            event.getTotalQuestionsInRound(),
-                            event.getRoundNumber()));
-        }));
-
-        subs.add(broadcaster.subscribe(gameId, CleverestBroadcaster.RenderCategoriesEvent.class, event -> {
-            QuizUtils.runActionInUi(attachEvent.getUI(), () -> {
-                midContainer.removeAll();
-                botContainer.removeAll();
-
-                if (isAdmin) {
-                    renderTopContainerForAdmin(Collections.singletonList(event.getUserToAnswer()));
-                    renderCategoriesTable(event.getUserToAnswer(), event.getData());
-                } else {
-                    if (SessionWrapper.getLoggedUser().equals(event.getUserToAnswer().getUsername())) {
-                        midContainer.add(CleverestComponents.userInfoLightSpan("Время отвечать!", LumoUtility.TextColor.PRIMARY, CleverestComponents.MOBILE_LARGE_FONT));
-                    } else {
-                        midContainer.add(CleverestComponents.userInfoLightSpan("В ожидании вопроса", LumoUtility.TextColor.SECONDARY, CleverestComponents.MOBILE_LARGE_FONT));
-                    }
-                }
-            });
-        }));
-
-        subs.add(broadcaster.subscribe(gameId, CleverestBroadcaster.GameFinishedEvent.class, event -> QuizUtils.runActionInUi(attachEvent.getUI(), this::renderResults)));
-        if (isAdmin) {
-            subscribeOnAdminOnlyEvents(attachEvent);
-        } else {
-            subscribeOnPlayerOnlyEvents(attachEvent);
+    public class GamePlayboardEvent extends ComponentEvent<CleverestGamePlayBoardComponent> {
+        public GamePlayboardEvent() {
+            super(CleverestGamePlayBoardComponent.this, true);
         }
     }
 
-    private void subscribeOnPlayerOnlyEvents(AttachEvent attachEvent) {
-        log.debug("Subscribed on player events: {}", SessionWrapper.getLoggedUser());
-        subs.add(broadcaster.subscribe(gameId, CleverestBroadcaster.UpdatePersonalScoreEvent.class,
-                event -> QuizUtils.runActionInUi(attachEvent.getUI().getUI(), () -> {
-                    log.debug("Updating score from event");
-                    renderUserPersonalScore();
-                })));
-        subs.add(broadcaster.subscribe(gameId, CleverestBroadcaster.QuestionChoosenEvent.class,
-                event -> QuizUtils.runActionInUi(attachEvent.getUI().getUI(),
-                        () -> {
-                            if (SessionWrapper.getLoggedUser().equals(event.getUserToAnswer().getUsername())) {
-                                QuizUtils.runActionInUi(attachEvent.getUI().getUI(),
-                                        () -> renderAnswersLayout(event.getQuestion(), AnswerType.VOICE_OR_INPUT));
-                            }
-                        })));
+    @RequiredArgsConstructor
+    @Getter
+    @Accessors(fluent = true)
+    public class UpdateQuestionGradeEvent extends GamePlayboardEvent {
+        private final QuestionModel question;
+        private final String username;
+        private final int grade;
     }
 
-    private void subscribeOnAdminOnlyEvents(AttachEvent attachEvent) {
-        log.debug("Subscribed on admin events: {}", SessionWrapper.getLoggedUser());
-        subs.add(broadcaster.subscribe(gameId, CleverestBroadcaster.AllUsersAnsweredEvent.class, event -> {
-            AudioUtils.playStaticSoundAsync(StaticValuesHolder.SUBMIT_ANSWER_SHORT_AUDIOS.next()).thenRun(() -> {
-                log.debug("Submit audio finished, run action in ui: {}, {}", attachEvent.getUI(), gameId);
-                QuizUtils.runActionInUi(attachEvent.getUI(), () -> {
-                    boolean approveManually = event.getCurrentRound() == 2;
-                    showCorrectAnswer(event.getQuestion(),
-                            broadcaster.getState(gameId).getSortedByResponseTimeUsers().values(),
-                            event.isRoundOver(),
-                            event.getRevealScoreAfter(),
-                            approveManually,
-                            uName -> {
-                                broadcaster.getState(gameId).getUsers().get(uName).increaseScore();
-                                broadcaster.sendUpdatePersonalScoreEvent(gameId);
-                            }, () -> {
-                            }, () -> broadcaster.sendGetQuestionEvent(gameId));
-                });
-            });
-        }));
-
-        subs.add(broadcaster.subscribe(gameId, CleverestBroadcaster.GetRoundEvent.class,
-                event -> QuizUtils.runActionInUi(attachEvent.getUI(), () -> showRoundRules(event.getRoundNumber(), event.getRules()))));
-    }
-
-    @Override
-    protected void onDetach(DetachEvent detachEvent) {
-        log.debug("onDetach: {}", gameId);
-        subs.forEach(Registration::remove);
-        subs.clear();
+    public Registration addUpdateQuestionGradeEventListener(final ComponentEventListener<UpdateQuestionGradeEvent> listener) {
+        return addListener(UpdateQuestionGradeEvent.class, listener);
     }
 }
